# livestock-auctions

./: .gitignore  Makefile  README.md  app.py  auto_sync.py  check_2026.py  check_mymarketnews.py  com.livestock-auctions.sync.plist  debug_pdf.py  download_new_reports.py  download_pdfs.py  download_pdfs.sh  download_via_api.py  explore_page.py  extract_pdf_data.py  pyproject.toml  scrape_all_pdfs.py  sync_reports.py
data/: clay_county_auction_data.csv
docs/: index.html  mkdocs.yml
docs/docs/: index.md
livestock_auctions/: __init__.py  dataset.py  features.py  plots.py
livestock_auctions/modeling/: predict.py  train.py
